# bugtracker_v1

./: .env  README.md  main.py  pyproject.toml
sql_app/: database.py  dependencies.py  mixins.py  security.py
sql_app/bugs/: bugs.py  crud.py  enumerations.py  model.py  schemas.py
sql_app/comments/: comments.py  crud.py  model.py  schemas.py
sql_app/projects/: crud.py  enumerations.py  model.py  projects.py  schemas.py
sql_app/users/: crud.py  model.py  schemas.py  users.py
